# respiq-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose-remote.yaml  docker-compose.yml  pyproject.toml
app/: auth.py  config.py  loader.py  main.py  predict.py  schemas.py
models/: 2-pentanone.yaml  cyclohexanone.yaml  h2.yaml  methane.yaml
scripts/: create_dummy_models.py
tests/: test_api.py
tests/sample_data/: AVS_2025-11-12_10-56-43.csv
