[project]
name = "respiq-prediction-api"
version = "0.4.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "pyyaml>=6.0",
]
